--- a/cpe-x.config
+++ b/cpe-x.config
@@ -4437,6 +4437,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_quectel=y
+CONFIG_PACKAGE_quectel-cm=y
 # end of 3. Applications
 
 #
