--- a/cpe-x.config
+++ b/cpe-x.config
@@ -2185,8 +2185,8 @@ CONFIG_PACKAGE_kmod-fs-vfat=y
 # CONFIG_PACKAGE_kmod-input-core is not set
 # CONFIG_PACKAGE_kmod-input-evdev is not set
 # CONFIG_PACKAGE_kmod-input-gpio-encoder is not set
-CONFIG_PACKAGE_kmod-input-gpio-keys=y
-CONFIG_PACKAGE_kmod-input-gpio-keys-polled=y
+# CONFIG_PACKAGE_kmod-input-gpio-keys=y
+# CONFIG_PACKAGE_kmod-input-gpio-keys-polled=y
 # CONFIG_PACKAGE_kmod-input-joydev is not set
 # CONFIG_PACKAGE_kmod-input-matrixkmap is not set
 # CONFIG_PACKAGE_kmod-input-polldev is not set
